--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
+  <nav>
+      <ul>
+          <li><%= link_to "Log out", root_path %></a></li>
+
+      </ul>
+  </nav>
+
+<p id="notice"><%= notice %></p>
 <%= yield %>
+
+
 
 </body>
 </html>
