Teachers can create new teachers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 <body>
 
   <nav>
+    <h3 class="nav-title">Gradebook Grabber</h3>
       <ul>
-          <li><%= link_to "Log out", root_path %></a></li>
+          <li class="logout-link"><%= link_to "Log out", root_path %></a></li>
 
       </ul>
   </nav>
