--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,7 @@ nav ul li {
     /* This allow us to arrange list items in a row, without using float */
     display: inline-block;
     list-style-type: none;
+    float: right;
   }
 
 /* Create a style for the first level items */
@@ -42,8 +43,19 @@ nav > ul > li > a {
     background-color:#333;
     display: block;
     line-height: 2em;
+    margin-right: 5px;
     padding: 0.5em 0.5em;
     text-decoration: none;
     font-family: "Helvetica Neue";
     font-size: 15px;
+  }
+
+  .nav-title {
+    display: inline-block;
+    float: left;
+    color: #aaa;
+    margin: 10px 5px 5px 10px;
+    padding: 10 0 10 0px;
+    text-decoration: none;
+    font-family: Lato;
   }
