--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Name:</strong>
@@ -11,9 +10,9 @@
 </p>
 
 <p>
-  <strong>Password digest:</strong>
-  <%= @teacher.password_digest %>
+  <strong>Password:</strong>
+  <%= @teacher.password %>
 </p>
 
-<%= link_to 'Edit', edit_teacher_path(@teacher) %> |
+<%= link_to 'Edit', edit_teacher_path(@teacher) %> 
 <%= link_to 'Back', teachers_path %>
