--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -11,8 +11,8 @@
 
 <p>
   <strong>Password:</strong>
-  <%= @teacher.password %>
+  <%= @teacher.password_digest %>
 </p>
 
-<%= link_to 'Edit', edit_teacher_path(@teacher) %> 
+<%= link_to 'Edit', edit_teacher_path(@teacher) %>
 <%= link_to 'Back', teachers_path %>
