--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,7 @@
  nav {
     background-color: #333;
     margin: 0;
+    padding: 0;
     overflow: hidden;
   }
 
@@ -34,16 +35,28 @@ nav ul li {
     /* This allow us to arrange list items in a row, without using float */
     display: inline-block;
     list-style-type: none;
+    float: right;
+    font-size: 16px;
   }
 
 /* Create a style for the first level items */
 nav > ul > li > a {
-    color: #aaa;
-    background-color:#333;
-    display: block;
-    line-height: 2em;
-    padding: 0.5em 0.5em;
-    text-decoration: none;
-    font-family: "Helvetica Neue";
-    font-size: 15px;
+  color: #aaa;
+  background-color:#333;
+  display: block;
+  line-height: 2em;
+  margin-right: 5px;
+  padding: 0.5em 0.5em;
+  font-family: "Helvetica Neue";
+  text-decoration: none;
   }
+
+.nav-title {
+  display: inline-block;
+  float: left;
+  color: #aaa;
+  margin: 10px 5px 10px 10px;
+  padding: 10 0 10 0px;
+  text-decoration: none;
+  font-family: Lato;
+}
