--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
   <nav>
+    <h3 class="nav-title">Gradebook Grabber</h3>
       <ul>
-          <li><%= link_to "Log out", root_path %></a></li>
+          <li class="logout-link"><%= link_to "Log out", root_path %></a></li>
 
       </ul>
   </nav>
