--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -1,29 +1,30 @@
-<h1>Listing Teachers</h1>
+<div class="teacher-page">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Password digest</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h2>School Staff</h2>
 
-  <tbody>
-    <% @teachers.each do |teacher| %>
-      <tr>
-        <td><%= teacher.name %></td>
-        <td><%= teacher.email %></td>
-        <td><%= teacher.password_digest %></td>
-        <td><%= link_to 'Show', teacher %></td>
-        <td><%= link_to 'Edit', edit_teacher_path(teacher) %></td>
-        <td><%= link_to 'Destroy', teacher, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <% @teachers.each do |teacher| %>
+    <p><h4><%= teacher.name %></h4></p>
+    <p>
+      <%= link_to 'Show Teacher Info', teacher %>
+      <%= link_to 'Edit Teacher Info', edit_teacher_path(teacher) %>
+      <%= link_to 'Destroy Teacher', teacher, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </p>
 
-<br>
+        <% teacher.students.each do |teacher| %>
+          <tr>
+            <td><%= student.name %></td>
+            <td><%= student.email %></td>
+            <td><%= link_to 'Show', student %></td>
+            <td><%= link_to 'Edit', edit_student_path(student) %></td>
+            <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td><%= link_to 'Add Parent', new_parent_path(student) %></td>
+            <td><%= link_to 'Add Grades', new_grade_path(student) %></td>
+          </tr>
+        <% end %>
 
-<%= link_to 'New Teacher', new_teacher_path %>
+  <% end %>
+
+  <br>
+
+  <%= link_to 'New Teacher', new_teacher_path %>
+</div>
