Revise parent scaffold and set up seeds

--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Password digest string:</strong>
-  <%= @parent.password_digest_string %>
+  <strong>Password digest:</strong>
+  <%= @parent.password_digest %>
 </p>
 
 <p>
