--- a/app/views/parents/_form.html.erb
+++ b/app/views/parents/_form.html.erb
@@ -20,8 +20,8 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
-    <%= f.label :password_digest_string %><br>
-    <%= f.text_field :password_digest_string %>
+    <%= f.label :password_digest %><br>
+    <%= f.text_field :password_digest %>
   </div>
   <div class="field">
     <%= f.label :student_id %><br>
