--- a/app/views/parents/index.html.erb
+++ b/app/views/parents/index.html.erb
@@ -7,7 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th>Password digest string</th>
+      <th>Password digest</th>
       <th>Student</th>
       <th colspan="3"></th>
     </tr>
@@ -18,7 +18,7 @@
       <tr>
         <td><%= parent.name %></td>
         <td><%= parent.email %></td>
-        <td><%= parent.password_digest_string %></td>
+        <td><%= parent.password_digest %></td>
         <td><%= parent.student_id %></td>
         <td><%= link_to 'Show', parent %></td>
         <td><%= link_to 'Edit', edit_parent_path(parent) %></td>
