--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -5,3 +5,13 @@
 .teacher-page {
   margin-left: 10px;
 }
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    padding-top: .5em;
+    padding-bottom: .5em;
+    padding-right: 50px;
+}
