--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -3,25 +3,34 @@
   <h2>School Staff</h2>
 
   <% @teachers.each do |teacher| %>
-    <p><h4><%= teacher.name %></h4></p>
+    <p><h3><%= teacher.name %></h3></p>
     <p>
       <%= link_to 'Show Teacher Info', teacher %>
       <%= link_to 'Edit Teacher Info', edit_teacher_path(teacher) %>
       <%= link_to 'Destroy Teacher', teacher, method: :delete, data: { confirm: 'Are you sure?' } %>
     </p>
 
-        <% teacher.students.each do |teacher| %>
+      <% teacher.students.each do |student| %>
+        <h4>Students</h4>
+        <table>
           <tr>
-            <td><%= student.name %></td>
-            <td><%= student.email %></td>
-            <td><%= link_to 'Show', student %></td>
-            <td><%= link_to 'Edit', edit_student_path(student) %></td>
-            <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td colspan="1"><h5><%= student.name %></h5></td>
+            <td><h5><%= student.email %></h5</td>
+          </tr>
+          <tr>
+            <td><%= link_to 'Show Student Info', student %></td>
+            <td><%= link_to 'Edit Student Info', edit_student_path(student) %></td>
+            <td><%= link_to 'Destroy Student', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+          <tr>
             <td><%= link_to 'Add Parent', new_parent_path(student) %></td>
             <td><%= link_to 'Add Grades', new_grade_path(student) %></td>
           </tr>
-        <% end %>
+        </table>
+      <% end %>
 
+      <p></p>
+      <p><%= link_to 'Add a new student', new_student_path(teacher) %></p>
   <% end %>
 
   <br>
